// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page title 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#111111",
        "fontFamily": "Arial",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "left",
      },
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`renders correctly 1`] = `
<Text
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
    ]
  }
>
  Snapshot test!
</Text>
`;
